--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ footer{
         <li><a href="#mirrors">Mirror</a></li>
         <li><a href="#fountains">Fountains</a></li>
         <li><a href="#planter">Planter</a></li>
-        <!-- <li><a href="#flower">Flower Stand</a></li> -->
+        <li><a href="#stick">Sticks</a></li>
         <li><a href="#doors">Door</a></li>
         <li><a href="#beds">Bed Designs</a></li>
         <li><a href="#sofas">Sofa Designs</a></li>
@@ -539,8 +539,16 @@ footer{
   
   </div></section>
 
-  <!-- <section id="flower" class="product"><h2>Flower Stand</h2><div class="grid">
-    <img src="./imgs/p1.jpg"></div></section> -->
+  <section id="stick" class="product"><h2>Sticks</h2><div class="grid">
+    <img src="./imgs/stick 2.jpeg">
+    <img src="./imgs/stick 6.jpeg">
+    <img src="./imgs/stick 4.jpeg">
+    <img src="./imgs/stick 3.jpeg">
+    <img src="./imgs/stick 1.jpeg">
+    <img src="./imgs/stick 5.jpeg">
+    <img src="./imgs/stick 7.jpeg">
+  
+  </div></section>
 
 <section id="doors" class="product"><h2>Door</h2><div class="grid">
     <img src="./imgs/door 1.jpeg">
